--- a/example/package.json
+++ b/example/package.json
@@ -2,6 +2,7 @@
   "name": "examples",
   "private": true,
   "type": "module",
+  "packageManager": "bun@1.2.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
