--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sharp-gpu",
   "version": "0.1.0",
   "description": "GPU-accelerated image processing library for the web",
+  "packageManager": "bun@1.2.0",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
@@ -19,7 +20,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "build:example": "cd example && bun install && bun run build"
   },
   "keywords": [
     "image",
