--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
   "name": "sharp-gpu",
   "version": "0.1.1",
-  "description": "GPU-accelerated image processing library for the web",
-  "packageManager": "bun@1.2.0",
-  "type": "module",
+  "author": "Rodrigo",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "devDependencies": {
+    "@types/bun": "^1.3.0",
+    "prettier": "^3.6.2",
+    "tsup": "^8.3.0",
+    "typescript": "^5.6.2"
+  },
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.cjs"
     }
   },
+  "description": "GPU-accelerated image processing library for the web",
   "files": [
     "dist"
   ],
-  "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "typecheck": "tsc --noEmit",
-    "dev:example": "cd example && bun install && bun run dev",
-    "build:example": "cd example && bun install && bun run build",
-    "release:patch": "npm version patch && git push --follow-tags"
-  },
   "keywords": [
     "image",
     "processing",
@@ -37,14 +33,17 @@
     "canvas",
     "image-manipulation"
   ],
-  "author": "Rodrigo",
   "license": "MIT",
-  "devDependencies": {
-    "prettier": "^3.6.2",
-    "tsup": "^8.3.0",
-    "typescript": "^5.6.2"
+  "packageManager": "bun@1.2.0",
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "typecheck": "tsc --noEmit",
+    "dev:example": "cd example && bun install && bun run dev",
+    "build:example": "cd example && bun install && bun run build",
+    "release:patch": "npm version patch && git push --follow-tags",
+    "test": "bun test"
   },
-  "dependencies": {
-    "regl": "^2.1.1"
-  }
+  "type": "module",
+  "types": "./dist/index.d.ts"
 }
