--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "declarationMap": true,
     "sourceMap": true
   },
-  "include": ["src"]
+  "include": ["src", "test"],
+  "types": ["bun-types"]
 }
