--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sharp-gpu",
-  "version": "0.1.2",
-  "author": "Rodrigo",
+  "version": "0.1.3",
+  "author": "Roprgm",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "devDependencies": {
@@ -18,6 +18,10 @@
     }
   },
   "description": "GPU-accelerated image processing library for the web",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/roprgm/sharp-gpu"
+  },
   "files": [
     "dist"
   ],
